--- a/LogsAndStrategy/appsettings.json
+++ b/LogsAndStrategy/appsettings.json
@@ -4,7 +4,7 @@
       "Default": "Trace",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
-      "Microsoft.EntityFrameworkCore": "Information"
+      "Microsoft.EntityFrameworkCore": "Trace"
     }
   },
   "AllowedHosts": "*",
