--- a/LogsAndStrategy/appsettings.json
+++ b/LogsAndStrategy/appsettings.json
@@ -9,6 +9,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocaldb; Initial Catalog=Tutorials; Integrated Security=true"
+    //"DefaultConnection": "Data Source=(localdb)\\MSSQLLocaldb; Initial Catalog=Tutorials; Integrated Security=true"
+    "DefaultConnection": "Data Source=DESKTOP-MGHTKHF; Initial Catalog=Tutorials; Integrated Security=true"
   }
 }
