--- a/LogsAndStrategy/LogsAndStrategy.csproj
+++ b/LogsAndStrategy/LogsAndStrategy.csproj
@@ -18,6 +18,7 @@
     </PackageReference>
     <PackageReference Include="NLog" Version="4.7.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.2" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.112.2" />
   </ItemGroup>
 
 </Project>
